WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246710
Fire error event when CSP blocks inline stylesheets
https://bugs.webkit.org/show_bug.cgi?id=246710
Summary
Fire error event when CSP blocks inline stylesheets
Ryan Reno
Reported
2022-10-18 14:09:19 PDT
We presently don't fire error events if CSP blocks loading of inline stylesheets or style elements.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-18 14:09:36 PDT
<
rdar://problem/101308540
>
Ryan Reno
Comment 2
2022-10-18 14:19:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5512
EWS
Comment 3
2022-10-19 11:14:12 PDT
Committed
255744@main
(d487138f2ba5): <
https://commits.webkit.org/255744@main
> Reviewed commits have been landed. Closing PR #5512 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug