Fire error event when CSP blocks inline stylesheets https://bugs.webkit.org/show_bug.cgi?id=246710 rdar://101308540

Reviewed by Chris Dumez.

When we block inline style with CSP we don't fire an error event. This change will cause the element
to fire an error event when CSP blocks us from creating a stylesheet.

* LayoutTests/TestExpectations:

* LayoutTests/http/tests/security/contentSecurityPolicy/style-src-blocked-error-event-expected.txt: Removed.
* LayoutTests/http/tests/security/contentSecurityPolicy/style-src-blocked-error-event.html: Removed.
    This test is redundant to
    imported/w3c/web-platform-tests/content-security-policy/style-src/style-blocked.html
    and any other tests which block style but allow unsafe-inline.

* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/style-src/style-src-error-event-fires-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/content-security-policy/style-src/style-src-inline-style-nonce-blocked-error-event-expected.txt:
* Source/WebCore/dom/InlineStyleSheetOwner.cpp:
(WebCore::InlineStyleSheetOwner::createSheet):

Canonical link: https://commits.webkit.org/255744@main